--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "vite",              // run local dev server
+    "start": "vite",            // optional alias for dev
+    "build": "vite build",      // build for production
+    "preview": "vite preview"   // preview the production build locally
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.83.0",
     "firebase": "^11.6.1",
-    "firebase-admin": "^13.6.0",
     "lucide-react": "^0.561.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -23,9 +23,9 @@
     "tailwindcss": "^3.4.18",
     "vite": "^7.2.7"
   },
-  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
-  "main": "eslint.config.js",
-  "keywords": [],
+  "description": "QuestVault: A platform for past questions",
+  "main": "index.js",
+  "keywords": ["react", "vite", "tailwind", "supabase", "firebase"],
   "author": "",
   "license": "ISC"
 }
