--- a/b2-backend/package.json
+++ b/b2-backend/package.json
@@ -2,7 +2,6 @@
   "name": "b2-backend",
   "version": "1.0.0",
   "type": "module",
-  "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
@@ -11,6 +10,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.22.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "helmet": "^7.1.0"
   }
 }
